# ActualExclusives

./: .flake8  .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  pyproject.toml
ActualExclusives/: _activate_django.py  manage.py
ActualExclusives/ActualExclusives/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
ActualExclusives/common/: constants.py  request_builder.py
ActualExclusives/countries/: LICENSE  README.md  countries.json
ActualExclusives/games/: admin.py  apps.py  forms.py  functions.py  models.py  tests.py  urls.py  views.py
ActualExclusives/games/migrations/: 0001_initial.py
ActualExclusives/games/templates/games/: index.html  results.html
ActualExclusives/scrape/: download_and_save.py  game.py  import_platforms.py  platform_games.py  recent.py
ActualExclusives/templates/: base.html
ActualExclusives/tests/: test_scrape_recent.py
